--- a/src/Modules/Map/Map.css
+++ b/src/Modules/Map/Map.css
@@ -9,7 +9,6 @@ body.page-map #topbar {
   position: absolute;
   top: 0px;
   width: 100%;
-  z-index: 1;
 }
 
 
